# CSC8507-08

./: .clang-format  .gemini_diff.txt  .gitignore  CMakeLists.txt  EnemyAI.cpp  EnemyAI.h  README.md  enemyAI.cs  fix_log_violations.sh  imgui.ini  setup_dependencies.ps1
.github/: copilot-instructions.md
.github/instructions/: ecs.instructions.md  engine-readonly.instructions.md  review.instructions.md
.github/workflows/: opengl-build.yml  opengl-release.yml
Assets/Data/: Dialogue_Default.json
Assets/Dialogue/: Dialogue_Alert.json  Dialogue_Alert_EN.json  Dialogue_Exposed.json  Dialogue_Exposed_EN.json  Dialogue_Normal.json  Dialogue_Normal_EN.json  Dialogue_Repair_EN.json  Dialogue_Trade_EN.json
Assets/Meshes/: 45Ramp.mtl  Capsule.mtl  Dock.gltf  Dock.itemspawns  Dock.navmesh  Dock.obj.bak  Dock_collision.gltf  Dock_finish.gltf  Dock_finish.mtl  HangerA.gltf  HangerA.itemspawns  HangerA.navmesh  HangerA.startpoints  HangerA_collision.gltf  HangerA_finish.gltf  HangerB.gltf  HangerB.itemspawns  HangerB.navmesh  HangerB.startpoints  HangerB_collision.gltf  HangerB_finish.gltf  Helipad.enemyspawns  Helipad.gltf  Helipad.itemspawns  Helipad.navmesh  Helipad.obj.bak  Helipad.startpoints  (+23 more)
CSC8503/: CMakeLists.txt  GameTechRenderer.cpp  GameTechRenderer.h  GameTechRendererInterface.h  Main.cpp  StateGameObject.h  TestECS.cpp  TutorialGame.cpp  app.rc
CSC8503/Source/Core/Bridge/: AssetManager.cpp  AssetManager.h  AssimpLoader.cpp  AssimpLoader.h  ConfigManager.h  ImGuiAdapter.cpp  ImGuiAdapter.h  InputAdapter.cpp  InputAdapter.h  PostProcessPipeline.cpp  PostProcessPipeline.h
CSC8503/Source/Core/ECS/: BaseSystem.h  ComponentPool.h  EntityID.h  EventBus.h  Registry.h  SystemManager.h
CSC8503/Source/Game/Components/: C_D_AIPerception.h  C_D_AIPreception.h  C_D_AIState.h  C_D_Animation.h  C_D_CQCHighlight.h  C_D_CQCState.h  C_D_Camera.h  C_D_Collider.h  C_D_DDoSFrozen.h  C_D_DataOceanPillar.h  C_D_DeathVisual.h  C_D_DebugName.h  C_D_DoorLocked.h  C_D_Dying.h  C_D_EnemyDormant.h  C_D_Health.h  C_D_HoloBaitState.h  C_D_Input.h  C_D_Interactable.h  C_D_InterpBuffer.h  C_D_Item.h  C_D_MapConfig.h  C_D_Material.h  C_D_MeshRenderer.h  C_D_NavAgent.h  C_D_NetworkIdentity.h  C_D_OrbitInventory.h  C_D_OrbitTriangle.h  C_D_PatrolRoute.h  C_D_PlayerInput.h  C_D_PlayerState.h  C_D_RigidBody.h  C_D_RoamAI.h  C_D_Spin.h  C_D_Transform.h  C_D_TriMeshCollider.h  C_D_TriangleProjectile.h  C_T_DeathZone.h  C_T_Enemy.h  C_T_FinishZone.h  (+61 more)
CSC8503/Source/Game/Events/: Evt_AI_EnemyEnteredHunt.h  Evt_Audio.h  Evt_CQC_Mimicry.h  Evt_CQC_Takedown.h  Evt_Chat.h  Evt_Death.h  Evt_EnemyAlertChange.h  Evt_Item_Pickup.h  Evt_Item_Use.h  Evt_Net_GameAction.h  Evt_Net_PeerConnected.h  Evt_Net_PeerDisconnected.h  Evt_Phys_Collision.h  Evt_Phys_Trigger.h  Evt_Player_Noise.h  Evt_Player_StanceChanged.h  Evt_Render_Proxy.h  Evt_UI_Navigation.h
CSC8503/Source/Game/Network/: NetProtocol.h  Net_Protocol.h
CSC8503/Source/Game/Prefabs/: ComponentRegistry.cpp  ComponentRegistry.h  PREFAB_ENEMY_TYPE01.cpp  PrefabFactory.cpp  PrefabFactory.h  RuntimeOverrides.h
CSC8503/Source/Game/Scenes/: GameplayBootstrap.cpp  GameplayBootstrap.h  IScene.h  SceneManager.cpp  SceneManager.h  Scene_CampaignLevel.cpp  Scene_CampaignLevel.h  Scene_Dock.cpp  Scene_Dock.h  Scene_HangerA.cpp  Scene_HangerA.h  Scene_HangerB.cpp  Scene_HangerB.h  Scene_Helipad.cpp  Scene_Helipad.h  Scene_Lab.cpp  Scene_Lab.h  Scene_MainMenu.cpp  Scene_MainMenu.h  Scene_NavTest.cpp  Scene_NavTest.h  Scene_NetworkGame.cpp  Scene_NetworkGame.h  Scene_PhysicsTest.cpp  Scene_PhysicsTest.h  Scene_TutorialLevel.cpp  Scene_TutorialLevel.h
CSC8503/Source/Game/Systems/: Sys_Animation.cpp  Sys_Animation.h  Sys_Audio.cpp  Sys_Audio.h  Sys_Camera.cpp  Sys_Camera.h  Sys_Chat.cpp  Sys_Chat.h  Sys_Countdown.cpp  Sys_Countdown.h  Sys_DataOcean.cpp  Sys_DataOcean.h  Sys_DeathEffect.cpp  Sys_DeathEffect.h  Sys_DeathJudgment.cpp  Sys_DeathJudgment.h  Sys_Door.cpp  Sys_Door.h  Sys_EnemyAI.cpp  Sys_EnemyAI.h  Sys_EnemyVision.cpp  Sys_EnemyVision.h  Sys_GhostDuel.cpp  Sys_GhostDuel.h  Sys_ImGui.cpp  Sys_ImGui.h  Sys_ImGuiCapsuleGen.cpp  Sys_ImGuiCapsuleGen.h  Sys_ImGuiEnemyAI.cpp  Sys_ImGuiEnemyAI.h  Sys_ImGuiEntityDebug.cpp  Sys_ImGuiEntityDebug.h  Sys_ImGuiNavTest.cpp  Sys_ImGuiNavTest.h  Sys_ImGuiPhysicsTest.cpp  Sys_ImGuiPhysicsTest.h  Sys_ImGuiRenderDebug.cpp  Sys_ImGuiRenderDebug.h  Sys_Input.cpp  Sys_Input.h  (+41 more)
CSC8503/Source/Game/UI/: UITheme.cpp  UITheme.h  UI_ActionNotify.cpp  UI_ActionNotify.h  UI_Anim.h  UI_Chat.cpp  UI_Chat.h  UI_DrawHelpers.cpp  UI_DrawHelpers.h  UI_Effects.cpp  UI_Effects.h  UI_GameOver.cpp  UI_GameOver.h  UI_GhostDuelResult.cpp  UI_HUD.cpp  UI_HUD.h  UI_HUD_Alert.cpp  UI_HUD_Degradation.cpp  UI_HUD_Equipment.cpp  UI_HUD_Internal.h  UI_HUD_Minimap.cpp  UI_HUD_Mission.cpp  UI_HUD_Multiplayer.cpp  UI_HUD_Status.cpp  UI_Interaction.cpp  UI_Interaction.h  UI_Inventory.cpp  UI_Inventory.h  UI_ItemIcons.cpp  UI_ItemIcons.h  UI_ItemWheel.cpp  UI_ItemWheel.h  UI_Loading.cpp  UI_Loading.h  UI_Loadout.cpp  UI_Loadout.h  UI_Lobby.cpp  UI_Lobby.h  UI_MenuNav.h  UI_Menus.cpp  (+11 more)
CSC8503/Source/Game/Utils/: Assert.h  DialogueLoader.cpp  DialogueLoader.h  DoorKeyLoader.cpp  DoorKeyLoader.h  EnemySpawnLoader.cpp  EnemySpawnLoader.h  ItemEquipSync.cpp  ItemEquipSync.h  ItemSpawnLoader.cpp  ItemSpawnLoader.h  Log.h  MapLoader.cpp  MapLoader.h  MapPointsLoader.cpp  MapPointsLoader.h  NavMeshPathfinderUtil.cpp  NavMeshPathfinderUtil.h  NoiseUtil.h  OrbitTriangleHelper.cpp  OrbitTriangleHelper.h  PathfinderUtil.h  PauseGuard.h  PrefabLoader.cpp  PrefabLoader.h  SaveManager.cpp  SaveManager.h  WindowHelper.cpp  WindowHelper.h
CSC8503CoreClasses/: CMakeLists.txt  GameObject.cpp  GameObject.h  PhysicsSystem.cpp  RenderObject.h
Docs/: Phase2_Disguise.md
GLTFLoader/: GLTFLoader.cpp  GLTFLoader.h
NCLCoreClasses/: Assets.h  Keyboard.h  Mesh.h  Quaternion.h  Vector.h  Win32Window.cpp  Win32Window.h  Window.h
OpenGLRendering/: OGLMesh.cpp  OGLMesh.h
docs/: same-map-ghost-mode-plan.md
installer/: NEUROMANCER_setup.iss
plan/: P0_architecture_change_plan.txt
(+74 files in other folders)
